# blog-search-mcp-in-python

./: .config.example  .gitignore  README.md  pyproject.toml
src/: config.py  server.py
tests/: conftest.py  test_config.py  test_integration.py  test_server.py
tests/fixtures/: blog_posts.json  config.json  llms_txt_content.json  serpapi_no_results.json  serpapi_success_response.json
