[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-blog-search-server"
version = "0.1.0"
description = "A Model Context Protocol server for searching blog posts stored in GitHub repositories"
authors = [
    {name = "Jessica Temporal", email = "jtemporal@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "mcp[cli]",
    "requests",
    "markdown",
    "pytest>=8.4.1",
    "google-search-results>=2.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/jtemporal/mcp-with-python-blog"
Repository = "https://github.com/jtemporal/mcp-with-python-blog"
Documentation = "https://github.com/jtemporal/mcp-with-python-blog/blob/main/README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -m 'not integration'"
markers = [
    "integration: marks tests as integration tests (deselected by default)",
    "slow: marks tests as slow (deselected by default)"
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError"
]